--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.19.0",
+    "style-loader": "^0.12.2",
+    "stylus-loader": "^1.1.1",
     "jquery": "^3.1.0",
     "lodash": "^4.15.0",
     "mustache": "^2.2.1",
